# fabric-ui

./: meson.build  package.nix
resources/: fabric-ui.css  meson.build  resources.gresource.xml
src/: application.vala  header.vala  helpers.vala  keys.vala  maybe_empty_box.vala  meson.build  pages.vala  pages_container.vala  scrolly_area.vala
